@@ -14,6 +14,8 @@ This NEWS file summarises the main changes.
 
 NEW FEATURES
 
+  o  fread can now understand commands, e.g. fread("grep blah file.txt").
+
   o  fread's integer64 argument implemented. Allows reading of integer64 data as 'double' or 'character'
      instead of bit64::integer64 (which remains the default as before). Thanks to Chris Neff for the
      suggestion. The default can be changed globally; e.g, options(datatable.integer64="character")
